--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,6 +9,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#009688" />
+    <meta name="description" content="Automatic Spotify Playlists by Rules" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
