--- a/web/public/index.html
+++ b/web/public/index.html
@@ -10,6 +10,7 @@
     />
     <meta name="theme-color" content="#009688" />
     <meta name="description" content="Automatic Spotify Playlists by Rules" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
